testdata/baselines/reference/submodule/conformance/parserArrowFunctionExpression15.errors.txt
fileJs.js(1,7): error TS8009: The '?' modifier can only be used in TypeScript files.
fileJs.js(1,18): error TS8010: Type annotations can only be used in TypeScript files.


==== fileJs.js (2 errors) ====
    false ? (param): string => param : null // Not legal JS; "Unexpected token ':'" at last colon
          ~
!!! error TS8009: The '?' modifier can only be used in TypeScript files.
                     ~~~~~~
!!! error TS8010: Type annotations can only be used in TypeScript files.
    
==== fileTs.ts (0 errors) ====
    false ? (param): string => param : null
    